[gd_scene load_steps=39 format=2]

[ext_resource path="res://src/core/Game.gd" type="Script" id=2]
[ext_resource path="res://assets/images/meta/title.png" type="Texture" id=3]
[ext_resource path="res://assets/images/meta/selador.png" type="Texture" id=4]
[ext_resource path="res://assets/gui/img/settings.png" type="Texture" id=5]
[ext_resource path="res://assets/gui/img/gem.png" type="Texture" id=6]
[ext_resource path="res://assets/images/sprites/portraits.png" type="Texture" id=7]
[ext_resource path="res://assets/gui/img/square.png" type="Texture" id=8]
[ext_resource path="res://assets/images/sprites/icons.png" type="Texture" id=9]
[ext_resource path="res://assets/gui/img/delve.png" type="Texture" id=10]
[ext_resource path="res://assets/gui/img/arrow.png" type="Texture" id=11]
[ext_resource path="res://assets/gui/img/alpha.png" type="Texture" id=12]
[ext_resource path="res://src/core/MainMenu.gd" type="Script" id=13]
[ext_resource path="res://assets/gui/img/profile.png" type="Texture" id=14]
[ext_resource path="res://src/core/Window.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/core/Settings.gd" type="Script" id=16]
[ext_resource path="res://assets/gui/img/check_unchecked.png" type="Texture" id=17]
[ext_resource path="res://assets/gui/img/check_checked.png" type="Texture" id=18]
[ext_resource path="res://assets/gui/img/settings_close.png" type="Texture" id=19]
[ext_resource path="res://assets/gui/img/arrow_pressed.png" type="Texture" id=20]
[ext_resource path="res://assets/gui/img/copyright.png" type="Texture" id=21]
[ext_resource path="res://src/core/Pane.tscn" type="PackedScene" id=22]
[ext_resource path="res://assets/gui/img/difficulty.png" type="Texture" id=23]
[ext_resource path="res://assets/gui/img/back.png" type="Texture" id=24]
[ext_resource path="res://assets/gui/img/continue_game.png" type="Texture" id=25]
[ext_resource path="res://assets/gui/img/new_game.png" type="Texture" id=26]
[ext_resource path="res://assets/gui/img/delve_pressed.png" type="Texture" id=27]
[ext_resource path="res://src/core/NewGame.gd" type="Script" id=28]
[ext_resource path="res://resources/jobs/fighter.tres" type="Resource" id=29]
[ext_resource path="res://resources/jobs/thief.tres" type="Resource" id=30]
[ext_resource path="res://resources/jobs/sorcerer.tres" type="Resource" id=31]
[ext_resource path="res://assets/gui/img/gem_small.png" type="Texture" id=32]
[ext_resource path="res://src/battle/Battle.tscn" type="PackedScene" id=34]
[ext_resource path="res://src/battle/Battle.gd" type="Script" id=37]

[sub_resource type="Animation" id=7]
resource_name = "Flash"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "FadeIn"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "FadeOut"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Game" type="Node"]
script = ExtResource( 2 )

[node name="Dungeon" type="Node2D" parent="."]
visible = false

[node name="GUI" type="CanvasLayer" parent="."]
script = ExtResource( 37 )

[node name="MainMenu" parent="GUI" instance=ExtResource( 15 )]
script = ExtResource( 13 )
banner = "Welcome to Delve!"

[node name="Btns" type="VBoxContainer" parent="GUI/MainMenu"]
margin_left = 6.0
margin_top = 69.0
margin_right = 103.0
margin_bottom = 163.0

[node name="ContinueBtn" type="Button" parent="GUI/MainMenu/Btns"]
margin_right = 97.0
margin_bottom = 21.0
rect_min_size = Vector2( 0, 21 )
text = "Continue Game"

[node name="Icon" type="TextureRect" parent="GUI/MainMenu/Btns/ContinueBtn"]
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 7.0
margin_right = 10.0
margin_bottom = -7.0
texture = ExtResource( 25 )

[node name="NewBtn" type="Button" parent="GUI/MainMenu/Btns"]
margin_top = 25.0
margin_right = 97.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 15 )
text = "Start New Game"

[node name="Icon" type="TextureRect" parent="GUI/MainMenu/Btns/NewBtn"]
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 4.0
margin_right = 10.0
margin_bottom = -4.0
texture = ExtResource( 26 )

[node name="Logo" type="TextureRect" parent="GUI/MainMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -27.5
margin_top = 31.0
margin_right = 28.5
margin_bottom = 46.0
texture = ExtResource( 3 )

[node name="ProfileBtn" type="Button" parent="GUI/MainMenu"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = -33.0
margin_right = -6.0
margin_bottom = -20.0
text = "Ash"

[node name="Icon" type="TextureRect" parent="GUI/MainMenu/ProfileBtn"]
anchor_bottom = 1.0
margin_left = -1.0
margin_right = 14.0
texture = ExtResource( 14 )
expand = true
stretch_mode = 4

[node name="DifficultyBtn" type="Button" parent="GUI/MainMenu"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = -51.0
margin_right = -6.0
margin_bottom = -38.0
text = "Standard"

[node name="Icon" type="TextureRect" parent="GUI/MainMenu/DifficultyBtn"]
anchor_bottom = 1.0
margin_left = -1.0
margin_right = 14.0
texture = ExtResource( 23 )
expand = true
stretch_mode = 4

[node name="ProfilePane" type="Control" parent="GUI/MainMenu"]
visible = false
margin_left = 5.0
margin_top = 137.0
margin_right = 104.0
margin_bottom = 173.0
mouse_filter = 2

[node name="Pane" parent="GUI/MainMenu/ProfilePane" instance=ExtResource( 22 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="Label" type="Label" parent="GUI/MainMenu/ProfilePane/Pane"]
anchor_right = 1.0
margin_bottom = 14.0
text = "Profile Name"
align = 1
valign = 1

[node name="NameEdit" type="LineEdit" parent="GUI/MainMenu/ProfilePane/Pane"]
anchor_right = 1.0
margin_left = 6.0
margin_top = 15.0
margin_right = -7.0
margin_bottom = 29.0
text = "Hero"
align = 1
max_length = 12
context_menu_enabled = false
clear_button_enabled = true
caret_blink = true

[node name="Shroud" type="ColorRect" parent="GUI/MainMenu/ProfilePane/Pane"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -82.0
margin_bottom = -36.0
color = Color( 0, 0, 0, 0.784314 )

[node name="Version" type="Label" parent="GUI/MainMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -23.5
margin_top = 48.0
margin_right = 16.5
margin_bottom = 54.0
custom_colors/font_color = Color( 0.152941, 0.152941, 0.152941, 1 )
text = "Ver. 0.1.0"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="GUI/MainMenu/Version"]
modulate = Color( 0.152941, 0.152941, 0.152941, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 38.0
margin_top = -3.0
margin_right = 45.0
margin_bottom = 4.0
texture = ExtResource( 12 )

[node name="Back" type="Button" parent="GUI/MainMenu"]
margin_left = 3.0
margin_top = 178.0
margin_right = 30.0
margin_bottom = 189.0
text = "Back"
align = 2

[node name="Icon" type="TextureRect" parent="GUI/MainMenu/Back"]
anchor_bottom = 1.0
margin_left = 3.0
margin_right = 10.0
texture = ExtResource( 24 )
stretch_mode = 4

[node name="GemShop" type="Button" parent="GUI/MainMenu"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -63.0
margin_top = -14.0
margin_right = -3.0
margin_bottom = -3.0
text = "100"

[node name="Icon" type="TextureRect" parent="GUI/MainMenu/GemShop"]
anchor_bottom = 1.0
margin_right = 13.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 4

[node name="NewGame" parent="GUI/MainMenu" instance=ExtResource( 15 )]
margin_bottom = -16.0
script = ExtResource( 28 )
banner = "Choose a Class"
jobs = [ ExtResource( 29 ), ExtResource( 31 ), ExtResource( 30 ) ]

[node name="Portrait" type="Sprite" parent="GUI/MainMenu/NewGame"]
position = Vector2( -2, 6 )
texture = ExtResource( 7 )
centered = false
hframes = 7
vframes = 4

[node name="Title" type="Label" parent="GUI/MainMenu/NewGame"]
margin_left = 42.0
margin_top = 12.0
margin_right = 102.0
margin_bottom = 18.0
text = "Lv. 1 Fighter"

[node name="XpGauge" type="TextureProgress" parent="GUI/MainMenu/NewGame"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -12.5
margin_top = 20.0
margin_right = 49.5
margin_bottom = 21.0
max_value = 1500.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 8 )
tint_under = Color( 0.152941, 0.152941, 0.152941, 1 )
tint_progress = Color( 0.760784, 0.760784, 0.760784, 1 )
nine_patch_stretch = true

[node name="XpVal" type="Label" parent="GUI/MainMenu/NewGame"]
margin_left = 42.0
margin_top = 22.0
margin_right = 102.0
margin_bottom = 28.0
custom_colors/font_color = Color( 0.313726, 0.313726, 0.313726, 1 )
text = "100/200 XP"

[node name="Stats" type="HBoxContainer" parent="GUI/MainMenu/NewGame"]
margin_left = 41.0
margin_top = 32.0
margin_right = 108.0
margin_bottom = 46.0
custom_constants/separation = 2

[node name="Life" type="Control" parent="GUI/MainMenu/NewGame/Stats"]
margin_right = 11.0
margin_bottom = 14.0
rect_min_size = Vector2( 11, 0 )

[node name="Sprite" type="Sprite" parent="GUI/MainMenu/NewGame/Stats/Life"]
modulate = Color( 0.490196, 0.490196, 0.490196, 1 )
position = Vector2( 3, 2 )
texture = ExtResource( 9 )
centered = false
hframes = 10
vframes = 10

[node name="Label" type="Label" parent="GUI/MainMenu/NewGame/Stats/Life"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -6.0
margin_right = 1.0
text = "15"
align = 1

[node name="Armor" type="Control" parent="GUI/MainMenu/NewGame/Stats"]
margin_left = 13.0
margin_right = 24.0
margin_bottom = 14.0
rect_min_size = Vector2( 11, 0 )

[node name="Sprite" type="Sprite" parent="GUI/MainMenu/NewGame/Stats/Armor"]
modulate = Color( 0.490196, 0.490196, 0.490196, 1 )
position = Vector2( 3, 2 )
texture = ExtResource( 9 )
centered = false
hframes = 10
vframes = 10
frame = 1

[node name="Label" type="Label" parent="GUI/MainMenu/NewGame/Stats/Armor"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -6.0
margin_right = 1.0
text = "0"
align = 1

[node name="Mana" type="Control" parent="GUI/MainMenu/NewGame/Stats"]
margin_left = 26.0
margin_right = 37.0
margin_bottom = 14.0
rect_min_size = Vector2( 11, 0 )

[node name="Sprite" type="Sprite" parent="GUI/MainMenu/NewGame/Stats/Mana"]
modulate = Color( 0.490196, 0.490196, 0.490196, 1 )
position = Vector2( 3, 2 )
texture = ExtResource( 9 )
centered = false
hframes = 10
vframes = 10
frame = 2

[node name="Label" type="Label" parent="GUI/MainMenu/NewGame/Stats/Mana"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -6.0
margin_right = 1.0
text = "0"
align = 1

[node name="Stamina" type="Control" parent="GUI/MainMenu/NewGame/Stats"]
margin_left = 39.0
margin_right = 50.0
margin_bottom = 14.0
rect_min_size = Vector2( 11, 0 )

[node name="Sprite" type="Sprite" parent="GUI/MainMenu/NewGame/Stats/Stamina"]
modulate = Color( 0.490196, 0.490196, 0.490196, 1 )
position = Vector2( 3, 2 )
texture = ExtResource( 9 )
centered = false
hframes = 10
vframes = 10
frame = 3

[node name="Label" type="Label" parent="GUI/MainMenu/NewGame/Stats/Stamina"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -6.0
margin_right = 1.0
text = "4"
align = 1

[node name="Gold" type="Control" parent="GUI/MainMenu/NewGame/Stats"]
margin_left = 52.0
margin_right = 63.0
margin_bottom = 14.0
rect_min_size = Vector2( 11, 0 )

[node name="Sprite" type="Sprite" parent="GUI/MainMenu/NewGame/Stats/Gold"]
modulate = Color( 0.490196, 0.490196, 0.490196, 1 )
position = Vector2( 3, 2 )
texture = ExtResource( 9 )
centered = false
hframes = 10
vframes = 10
frame = 4

[node name="Label" type="Label" parent="GUI/MainMenu/NewGame/Stats/Gold"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -6.0
margin_right = 1.0
text = "10"
align = 1

[node name="Btns" type="VBoxContainer" parent="GUI/MainMenu/NewGame"]
margin_left = 4.0
margin_top = 53.0
margin_right = 105.0
margin_bottom = 98.0
custom_constants/separation = 3

[node name="Perks" type="Button" parent="GUI/MainMenu/NewGame/Btns"]
margin_right = 101.0
margin_bottom = 13.0
rect_min_size = Vector2( 0, 13 )
disabled = true
text = "Perks Unlocked at Lv. 3"

[node name="Gear" type="Button" parent="GUI/MainMenu/NewGame/Btns"]
margin_top = 16.0
margin_right = 101.0
margin_bottom = 29.0
rect_min_size = Vector2( 0, 13 )
disabled = true
text = "Gear Unlocked at Lv. 2"

[node name="Spec" type="Button" parent="GUI/MainMenu/NewGame/Btns"]
margin_top = 32.0
margin_right = 101.0
margin_bottom = 45.0
rect_min_size = Vector2( 0, 13 )
disabled = true
shortcut_in_tooltip = false
text = "Novice Fighter"

[node name="Desc" type="Label" parent="GUI/MainMenu/NewGame"]
margin_left = 4.0
margin_top = 101.0
margin_right = 105.0
margin_bottom = 154.0
text = "{Uninitialized}"
align = 1
autowrap = true

[node name="Nav" type="Control" parent="GUI/MainMenu/NewGame"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -23.0

[node name="Delve" type="TextureButton" parent="GUI/MainMenu/NewGame/Nav"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -14.5
margin_top = -21.0
margin_right = 14.5
margin_bottom = -3.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 27 )
expand = true
stretch_mode = 3

[node name="Prev" type="TextureButton" parent="GUI/MainMenu/NewGame/Nav"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -21.0
margin_right = 29.0
margin_bottom = -3.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 20 )
expand = true
stretch_mode = 3
flip_h = true

[node name="Next" type="TextureButton" parent="GUI/MainMenu/NewGame/Nav"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -29.0
margin_top = -21.0
margin_bottom = -3.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 20 )
expand = true
stretch_mode = 3

[node name="Perks" parent="GUI/MainMenu/NewGame" instance=ExtResource( 15 )]
visible = false
banner = "Class Perks"

[node name="ScrollContainer" type="ScrollContainer" parent="GUI/MainMenu/NewGame/Perks"]
margin_left = 4.0
margin_top = 12.0
margin_right = 106.0
margin_bottom = 97.0
follow_focus = true
scroll_horizontal_enabled = false

[node name="Perks" type="VBoxContainer" parent="GUI/MainMenu/NewGame/Perks/ScrollContainer"]
margin_right = 95.0
margin_bottom = 103.0
rect_min_size = Vector2( 95, 97 )
custom_constants/separation = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Button" type="Button" parent="GUI/MainMenu/NewGame/Perks/ScrollContainer/Perks"]
margin_right = 95.0
margin_bottom = 13.0
rect_min_size = Vector2( 0, 13 )
shortcut_in_tooltip = false
text = " Toughness"

[node name="Label" type="Label" parent="GUI/MainMenu/NewGame/Perks/ScrollContainer/Perks/Button"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -23.0
margin_top = -4.5
margin_right = -4.0
margin_bottom = 4.5
text = "1/5"
align = 2
valign = 1

[node name="Button2" type="Button" parent="GUI/MainMenu/NewGame/Perks/ScrollContainer/Perks"]
margin_top = 15.0
margin_right = 95.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 13 )
shortcut_in_tooltip = false
text = " Toughness"

[node name="Label" type="Label" parent="GUI/MainMenu/NewGame/Perks/ScrollContainer/Perks/Button2"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -23.0
margin_top = -4.5
margin_right = -4.0
margin_bottom = 4.5
text = "1/5"
align = 2
valign = 1

[node name="Button3" type="Button" parent="GUI/MainMenu/NewGame/Perks/ScrollContainer/Perks"]
margin_top = 30.0
margin_right = 95.0
margin_bottom = 43.0
rect_min_size = Vector2( 0, 13 )
shortcut_in_tooltip = false
text = " Toughness"

[node name="Label" type="Label" parent="GUI/MainMenu/NewGame/Perks/ScrollContainer/Perks/Button3"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -23.0
margin_top = -4.5
margin_right = -4.0
margin_bottom = 4.5
text = "1/5"
align = 2
valign = 1

[node name="Button4" type="Button" parent="GUI/MainMenu/NewGame/Perks/ScrollContainer/Perks"]
margin_top = 45.0
margin_right = 95.0
margin_bottom = 58.0
rect_min_size = Vector2( 0, 13 )
shortcut_in_tooltip = false
text = " Toughness"

[node name="Label" type="Label" parent="GUI/MainMenu/NewGame/Perks/ScrollContainer/Perks/Button4"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -23.0
margin_top = -4.5
margin_right = -4.0
margin_bottom = 4.5
text = "1/5"
align = 2
valign = 1

[node name="Button5" type="Button" parent="GUI/MainMenu/NewGame/Perks/ScrollContainer/Perks"]
margin_top = 60.0
margin_right = 95.0
margin_bottom = 73.0
rect_min_size = Vector2( 0, 13 )
shortcut_in_tooltip = false
text = " Toughness"

[node name="Label" type="Label" parent="GUI/MainMenu/NewGame/Perks/ScrollContainer/Perks/Button5"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -23.0
margin_top = -4.5
margin_right = -4.0
margin_bottom = 4.5
text = "1/5"
align = 2
valign = 1

[node name="Button6" type="Button" parent="GUI/MainMenu/NewGame/Perks/ScrollContainer/Perks"]
margin_top = 75.0
margin_right = 95.0
margin_bottom = 88.0
rect_min_size = Vector2( 0, 13 )
shortcut_in_tooltip = false
text = " Toughness"

[node name="Label" type="Label" parent="GUI/MainMenu/NewGame/Perks/ScrollContainer/Perks/Button6"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -23.0
margin_top = -4.5
margin_right = -4.0
margin_bottom = 4.5
text = "1/5"
align = 2
valign = 1

[node name="Button7" type="Button" parent="GUI/MainMenu/NewGame/Perks/ScrollContainer/Perks"]
margin_top = 90.0
margin_right = 95.0
margin_bottom = 103.0
rect_min_size = Vector2( 0, 13 )
shortcut_in_tooltip = false
text = " Toughness"

[node name="Label" type="Label" parent="GUI/MainMenu/NewGame/Perks/ScrollContainer/Perks/Button7"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -23.0
margin_top = -4.5
margin_right = -4.0
margin_bottom = 4.5
text = "1/5"
align = 2
valign = 1

[node name="DescPanel" type="Panel" parent="GUI/MainMenu/NewGame/Perks"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -77.0
margin_right = -2.0

[node name="Header" type="ColorRect" parent="GUI/MainMenu/NewGame/Perks/DescPanel"]
anchor_right = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = 12.0
color = Color( 0.760784, 0.760784, 0.760784, 1 )

[node name="Title" type="Label" parent="GUI/MainMenu/NewGame/Perks/DescPanel/Header"]
anchor_right = 1.0
margin_left = 2.0
margin_top = 1.0
margin_right = -2.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0.152941, 0.152941, 0.152941, 1 )
text = "Toughness"
align = 1
valign = 1

[node name="Ranks" type="Label" parent="GUI/MainMenu/NewGame/Perks/DescPanel/Header"]
margin_left = 74.0
margin_top = 1.0
margin_right = 100.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0.152941, 0.152941, 0.152941, 1 )
text = "3/5"
align = 2

[node name="Desc" type="Label" parent="GUI/MainMenu/NewGame/Perks/DescPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 13.0
margin_right = -4.0
margin_bottom = -15.0
text = "Increases max Life.

Current: +15 Life
Next: +20 Life
line
line
line"
autowrap = true

[node name="BuyBtn" type="Button" parent="GUI/MainMenu/NewGame/Perks"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = -14.0
margin_right = -3.0
margin_bottom = -1.0
text = " Rank Up 4 -> 5"
align = 0

[node name="Label" type="Label" parent="GUI/MainMenu/NewGame/Perks/BuyBtn"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -31.0
margin_top = -3.5
margin_right = -9.0
margin_bottom = 2.5
text = "100"
align = 2
valign = 1

[node name="TextureRect" type="TextureRect" parent="GUI/MainMenu/NewGame/Perks/BuyBtn/Label"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_right = 6.0
texture = ExtResource( 32 )

[node name="Title" type="ColorRect" parent="GUI/MainMenu"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 48.0
color = Color( 0, 0, 0, 1 )

[node name="Cover" type="ColorRect" parent="GUI/MainMenu/Title"]
anchor_right = 1.0
margin_top = -48.0
margin_bottom = -39.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="GUI/MainMenu/Title"]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -3.0
margin_bottom = 4.0
custom_colors/font_color_shadow = Color( 0.313726, 0.313726, 0.313726, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
text = "TAP TO START"
align = 1
valign = 1

[node name="Copyright" type="Label" parent="GUI/MainMenu/Title"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -13.0
margin_bottom = -2.0
custom_colors/font_color = Color( 0.313726, 0.313726, 0.313726, 1 )
text = " Adam Bray    2022"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="GUI/MainMenu/Title/Copyright"]
self_modulate = Color( 0.313726, 0.313726, 0.313726, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 9.5
margin_top = -3.5
margin_right = 16.5
margin_bottom = 3.5
texture = ExtResource( 21 )

[node name="Selador" type="TextureRect" parent="GUI/MainMenu/Title"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -26.0
margin_top = -30.0
margin_right = 26.0
margin_bottom = -21.0
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="GUI/MainMenu/Title"]
autoplay = "Flash"
anims/Flash = SubResource( 7 )
anims/RESET = SubResource( 8 )

[node name="Start" type="TextureButton" parent="GUI/MainMenu/Title"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="Battle" parent="GUI" instance=ExtResource( 34 )]

[node name="SettingsBtn" type="TextureButton" parent="GUI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -9.0
margin_bottom = 9.0
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 3

[node name="SettingsMenu" parent="GUI" instance=ExtResource( 15 )]
visible = false
script = ExtResource( 16 )
banner = "Settings"

[node name="CloseBtn" type="TextureButton" parent="GUI/SettingsMenu"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -9.0
margin_bottom = 9.0
texture_normal = ExtResource( 19 )
expand = true
stretch_mode = 3

[node name="Btns" type="VBoxContainer" parent="GUI/SettingsMenu"]
margin_left = 10.0
margin_top = 14.0
margin_right = 99.0
margin_bottom = 94.0

[node name="Setting" type="Control" parent="GUI/SettingsMenu/Btns"]
margin_right = 89.0
margin_bottom = 9.0
rect_min_size = Vector2( 0, 9 )

[node name="Label" type="Label" parent="GUI/SettingsMenu/Btns/Setting"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 11.0
text = "Mute BGM"
valign = 1

[node name="TextureButton" type="TextureButton" parent="GUI/SettingsMenu/Btns/Setting"]
anchor_bottom = 1.0
margin_right = 9.0
toggle_mode = true
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 18 )

[node name="Overlay" type="ColorRect" parent="GUI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="Fader" type="AnimationPlayer" parent="GUI/Overlay"]
anims/FadeIn = SubResource( 4 )
anims/FadeOut = SubResource( 5 )
anims/RESET = SubResource( 6 )

[connection signal="pressed" from="GUI/MainMenu/Btns/ContinueBtn" to="GUI/MainMenu" method="_on_ContinueBtn_pressed"]
[connection signal="pressed" from="GUI/MainMenu/Btns/NewBtn" to="GUI/MainMenu" method="_on_NewBtn_pressed"]
[connection signal="pressed" from="GUI/MainMenu/ProfileBtn" to="GUI/MainMenu" method="_on_ProfileBtn_pressed"]
[connection signal="text_changed" from="GUI/MainMenu/ProfilePane/Pane/NameEdit" to="GUI/MainMenu" method="_on_NameEdit_text_changed"]
[connection signal="pressed" from="GUI/MainMenu/Back" to="GUI/MainMenu" method="_on_Back_pressed"]
[connection signal="pressed" from="GUI/MainMenu/NewGame/Btns/Perks" to="GUI/MainMenu/NewGame" method="_on_Perks_pressed"]
[connection signal="pressed" from="GUI/MainMenu/NewGame/Nav/Delve" to="GUI/MainMenu/NewGame" method="_on_Delve_pressed"]
[connection signal="pressed" from="GUI/MainMenu/NewGame/Nav/Prev" to="GUI/MainMenu/NewGame" method="_on_Prev_pressed"]
[connection signal="pressed" from="GUI/MainMenu/NewGame/Nav/Next" to="GUI/MainMenu/NewGame" method="_on_Next_pressed"]
[connection signal="pressed" from="GUI/MainMenu/Title/Start" to="GUI/MainMenu" method="_on_Start_pressed"]
[connection signal="pressed" from="GUI/SettingsBtn" to="." method="_on_SettingsBtn_pressed"]
[connection signal="pressed" from="GUI/SettingsMenu/CloseBtn" to="GUI/SettingsMenu" method="_on_CloseBtn_pressed"]
